--- a/style.css
+++ b/style.css
@@ -64,9 +64,11 @@ button {
     background-color: #3882f6;
     color: #e5e7eb;
     font-weight: 900;
-    border-radius: 15px;
-    padding-left: 8px;
-    padding-right: 8px;
+    border-radius: 5px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .info {
@@ -85,28 +87,28 @@ button {
     font-weight: 900;
 }
 
-.boxes {
+.body-info {
     display: flex;
     justify-content: center;
-    gap: 24px;
-    margin-bottom: 0;
+    align-items: center;
+    gap: 36px;
+
+}
+
+.boxplustext {
+    display: flex;
+    flex-direction: column;
+
 }
 
 .box {
-    height: 100px;
-    width: 100px;
-    border: 2px solid;
+    height: 140px;
+    width: 140px;
+    border: 2px solid #3882f6;
+    border-radius: 15px;
 }
 
-.info-subtext {
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    margin-top: 0px;
-}
-
-.info-subtext p {
-    width: 100px;
-    margin-top: 0px;
+.boxsubtext {
+    width: 140px;
     text-align: center;
 }
