--- a/style.css
+++ b/style.css
@@ -112,3 +112,30 @@ button {
     width: 140px;
     text-align: center;
 }
+
+.quote-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 96px;
+    padding-left: 144px;
+    padding-right: 144px;
+    padding-bottom: 72px;
+    background-color: #e5e7eb;
+    margin-top: 96px;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+}
+.author {
+    display: flex;
+    margin-left: auto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+}
