Add footer to the landing page
Created a last div to encompass the footer and added a flex display to
justify and align the contents to the center of the container.

--- a/style.css
+++ b/style.css
@@ -180,3 +180,12 @@ button {
     border-color: #e5e7eb;
 }
 
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    color: #e5e7eb;
+    padding-top: 18px;
+    padding-bottom: 18px;
+}
